1. Socketio 연결 테스트 작성 2. 자바 클라이언트 https://github.com/Gottox/socket.io-java-client 사

--- a/changim/pom.xml
+++ b/changim/pom.xml
@@ -92,6 +92,11 @@
 			<artifactId>mod-socket-io</artifactId>
 			<version>${mod-socket-io.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.socket</groupId>
+			<artifactId>socket.io-java-client</artifactId>
+			<version>1</version>
+		</dependency>
 
 	</dependencies>
 
