[Netty 소스코드 추가] 1)디코더, 인코더 2)핸들러 3)테스트 케이스

--- a/changim/pom.xml
+++ b/changim/pom.xml
@@ -98,6 +98,14 @@
 			<version>1</version>
 		</dependency>
 
+		<!-- netty -->
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.0.27.Final</version>
+		</dependency>
+
+
 	</dependencies>
 
 
